# ChessV2

./: CMakeLists.txt  ChessClient  ChessGui
client/: CMakeLists.txt  chessClientGui.h
client/src/: .old.cpp  chessClient.h  chessClientGui.cpp  chessClientGui.h  chessComponent.cpp  chessComponent.h  chessMenu.cpp  main.cpp
client/src/cli/: chessCli.h
client/src/gui/: CMakeLists.txt  chessComponent.cpp  chessComponent.h  chessGui.cpp  chessGui.h  chessMenu.cpp  chessMenu.h  chessServerSelect.h
cmake/: FindClanLib.cmake
server/src/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
